--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -4,9 +4,26 @@
 
 body{
   margin-top: 100px;
+  text-align: center;
 }
 
+.jumbotron{
+  text-align: center;
+}
 img.logo {
   width: 10px;
   height: 10px;
+}
+
+.carousel-indicators{
+  bottom: 0;
+}
+
+.carousel-indicators .active{
+  top: 0;
+  background-color: black;
+}
+.carousel-indicators li{
+  top: 0;
+  border-color: black;
 }
